--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2227,6 +2227,11 @@ img {
         scroll-snap-type: unset;
   }
 }
+@media (max-width: 992px) {
+  .screens {
+    max-height: calc(var(--vh, 1vh) * 100);
+  }
+}
 .screens.main .screen-about-contest {
   padding-top: 90px;
 }
@@ -2329,7 +2334,17 @@ img {
 }
 @media (max-width: 768px) {
   .screen-promo {
+    max-height: unset;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
     padding-top: 110px;
+    padding-bottom: 60px;
+  }
+}
+@media (max-width: 599px) {
+  .screen-promo {
+    padding-bottom: 10px;
   }
 }
 .screen-promo .container {
@@ -2610,11 +2625,14 @@ img {
     padding-top: 25px;
   }
 }
-@media (max-width: 599px) {
+@media (max-width: 960px) {
   .screen-alert {
     visibility: hidden;
     display: none;
     bottom: 20px;
+    -webkit-transform: translateY(0%);
+        -ms-transform: translateY(0%);
+            transform: translateY(0%);
   }
 }
 .screen-alert.mobile {
@@ -2622,7 +2640,7 @@ img {
   display: none;
   z-index: -1;
 }
-@media (max-width: 599px) {
+@media (max-width: 960px) {
   .screen-alert.mobile {
     visibility: visible;
     display: block;
@@ -2656,6 +2674,13 @@ img {
         -ms-transform: translateY(-120%);
             transform: translateY(-120%);
     bottom: 0;
+  }
+}
+@media (max-width: 880px) {
+  .screen-benefits .screen-alert {
+    -webkit-transform: translateY(0%);
+        -ms-transform: translateY(0%);
+            transform: translateY(0%);
   }
 }
 @media (max-width: 880px) {
@@ -6494,7 +6519,7 @@ img {
   visibility: visible;
   display: block;
 }
-@media (max-width: 599px) {
+@media (max-width: 960px) {
   .screen-slider.orange .screen-alert.orange {
     visibility: hidden;
     display: none;
@@ -6505,7 +6530,7 @@ img {
   display: none;
   z-index: 1;
 }
-@media (max-width: 599px) {
+@media (max-width: 960px) {
   .screen-slider.orange .screen-alert.orange.mobile {
     visibility: visible;
     display: block;
@@ -6523,7 +6548,7 @@ img {
   visibility: visible;
   display: block;
 }
-@media (max-width: 599px) {
+@media (max-width: 960px) {
   .screen-slider.green .screen-alert.green {
     visibility: hidden;
     display: none;
@@ -6534,7 +6559,7 @@ img {
   display: none;
   z-index: 1;
 }
-@media (max-width: 599px) {
+@media (max-width: 960px) {
   .screen-slider.green .screen-alert.green.mobile {
     visibility: visible;
     display: block;
@@ -6552,7 +6577,7 @@ img {
   visibility: visible;
   display: block;
 }
-@media (max-width: 599px) {
+@media (max-width: 960px) {
   .screen-slider.brown .screen-alert.brown {
     visibility: hidden;
     display: none;
@@ -6563,7 +6588,7 @@ img {
   display: none;
   z-index: 1;
 }
-@media (max-width: 599px) {
+@media (max-width: 960px) {
   .screen-slider.brown .screen-alert.brown.mobile {
     visibility: visible;
     display: block;
