--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1791,7 +1791,7 @@ img {
     max-width: 20%;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .col-md-1 {
     -ms-flex: 0 0 8.3333333333%;
     -webkit-box-flex: 0;
@@ -2704,6 +2704,9 @@ img {
   overflow: hidden;
   position: relative;
   background-color: #23372B;
+  background-image: url(../images/carusel-bg.svg), url(../images/bottom-screen-bg.png);
+  background-repeat: no-repeat;
+  background-position: right center;
 }
 @media (max-width: 880px) {
   .benefits-slide {
@@ -2762,7 +2765,6 @@ img {
   height: 100vh;
   max-height: 1366px;
   padding: 150px 50px calc(28vh + 230px) 150px;
-  background: url(../images/bottom-screen-bg.png) right center no-repeat;
   background-size: 100% 100%;
 }
 @media (min-width: 1920px), (min-height: 1000px) {
@@ -4033,7 +4035,7 @@ img {
     margin-bottom: 55px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 960px) {
   .screen-plans-head {
     gap: 20px;
     margin-bottom: 40px;
@@ -4074,10 +4076,22 @@ img {
     font-size: 2.625rem;
   }
 }
+@media (max-width: 1140px) {
+  .screen-plans-title {
+    font-size: 38px;
+    font-size: 2.375rem;
+  }
+}
 @media (max-width: 1024px) {
   .screen-plans-title {
     font-size: 38px;
     font-size: 2.375rem;
+  }
+}
+@media (max-width: 960px) {
+  .screen-plans-title {
+    font-size: 36px;
+    font-size: 2.25rem;
   }
 }
 @media (max-width: 480px) {
@@ -4086,7 +4100,7 @@ img {
     font-size: 2.25rem;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 960px) {
   .screen-plans-select {
     margin-left: auto;
   }
@@ -4106,7 +4120,7 @@ img {
     border-radius: 8px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 960px) {
   .screen-plans-search {
     width: 100%;
     -webkit-box-ordinal-group: 2;
@@ -4142,9 +4156,20 @@ img {
     padding-right: 20px;
   }
 }
+@media (max-width: 1140px) {
+  .screen-plans-search input {
+    max-width: 308px;
+  }
+}
 @media (max-width: 1024px) {
   .screen-plans-search input {
     max-width: 265px;
+  }
+}
+@media (max-width: 960px) {
+  .screen-plans-search input {
+    max-width: 100%;
+    width: 100%;
   }
 }
 @media (max-width: 768px) {
@@ -4620,16 +4645,16 @@ img {
   }
 }
 .screen-about-contest .contest-content {
-  max-width: 547px;
+  max-width: 590px;
 }
 @media (max-width: 1366px) {
   .screen-about-contest .contest-content {
-    max-width: 447px;
+    max-width: 490px;
   }
 }
 @media (max-width: 1280px) {
   .screen-about-contest .contest-content {
-    max-width: 402px;
+    max-width: 450px;
   }
 }
 @media (max-width: 1024px) {
@@ -4640,37 +4665,37 @@ img {
 .screen-about-contest__title {
   margin-top: 0;
   color: #FFF;
-  font-size: 56px;
-  font-size: 3.5rem;
+  font-size: 50px;
+  font-size: 3.125rem;
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 20px;
 }
 @media (max-width: 1680px) {
   .screen-about-contest__title {
-    font-size: 50px;
-    font-size: 3.125rem;
+    font-size: 42px;
+    font-size: 2.625rem;
     margin-bottom: 16px;
   }
 }
 @media (max-width: 1366px) {
   .screen-about-contest__title {
-    font-size: 46px;
-    font-size: 2.875rem;
+    font-size: 36px;
+    font-size: 2.25rem;
     margin-bottom: 14px;
   }
 }
 @media (max-width: 1280px) {
   .screen-about-contest__title {
-    font-size: 42px;
-    font-size: 2.625rem;
+    font-size: 32px;
+    font-size: 2rem;
     margin-bottom: 14px;
   }
 }
 @media (max-width: 1140px) {
   .screen-about-contest__title {
-    font-size: 38px;
-    font-size: 2.375rem;
+    font-size: 32px;
+    font-size: 2rem;
     margin-bottom: 10px;
     max-width: 542px;
   }
@@ -5264,6 +5289,9 @@ img {
   padding-right: 10px;
 }
 @media (max-width: 1366px) {
+  .screen-plans-cards {
+    min-height: 60vh;
+  }
   .screen-plans-cards .row {
     margin-left: -8px;
     margin-right: -8px;
@@ -5271,6 +5299,11 @@ img {
   .screen-plans-cards [class*=col-] {
     padding-left: 8px;
     padding-right: 8px;
+  }
+}
+@media (max-width: 1140px) {
+  .screen-plans-cards {
+    min-height: 63vh;
   }
 }
 @media (max-width: 1024px) {
@@ -5334,21 +5367,6 @@ img {
     font-size: 0.875rem;
     padding: 20px 28px;
   }
-}
-.screen-plans-cards__wrapper {
-  -webkit-transform: rotate(-2deg);
-      -ms-transform: rotate(-2deg);
-          transform: rotate(-2deg);
-}
-.screen-plans-cards__wrapper:nth-child(odd) {
-  -webkit-transform: rotate(-0.5deg);
-      -ms-transform: rotate(-0.5deg);
-          transform: rotate(-0.5deg);
-}
-.screen-plans-cards__wrapper:nth-child(even) {
-  -webkit-transform: rotate(0.5deg);
-      -ms-transform: rotate(0.5deg);
-          transform: rotate(0.5deg);
 }
 .screen-plans-cards .row {
   -ms-flex-wrap: wrap;
@@ -5766,8 +5784,8 @@ img {
 .screen-contest-form form .h2 {
   width: 100%;
   color: #23372B;
-  font-size: 64px;
-  font-size: 4rem;
+  font-size: 40px;
+  font-size: 2.5rem;
   font-weight: 700;
   line-height: 135%;
   text-transform: uppercase;
@@ -5777,37 +5795,37 @@ img {
 }
 @media (max-width: 1680px) {
   .screen-contest-form form .h2 {
-    font-size: 56px;
-    font-size: 3.5rem;
+    font-size: 30px;
+    font-size: 1.875rem;
     margin-bottom: 50px;
   }
 }
 @media (max-width: 1366px) {
   .screen-contest-form form .h2 {
-    font-size: 48px;
-    font-size: 3rem;
+    font-size: 26px;
+    font-size: 1.625rem;
     margin-bottom: 40px;
   }
 }
 @media (max-width: 1280px) {
   .screen-contest-form form .h2 {
-    font-size: 42px;
-    font-size: 2.625rem;
+    font-size: 22px;
+    font-size: 1.375rem;
     text-align: center;
     margin-bottom: 30px;
   }
 }
 @media (max-width: 1024px) {
   .screen-contest-form form .h2 {
-    font-size: 38px;
-    font-size: 2.375rem;
+    font-size: 22px;
+    font-size: 1.375rem;
     margin-bottom: 40px;
   }
 }
 @media (max-width: 768px) {
   .screen-contest-form form .h2 {
-    font-size: 36px;
-    font-size: 2.25rem;
+    font-size: 26px;
+    font-size: 1.625rem;
     margin-bottom: 22px;
   }
 }
