--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -461,6 +461,9 @@
   overflow: hidden;
   position: relative;
   background-color: $bgc;
+  background-image: url(../images/carusel-bg.svg), url(../images/bottom-screen-bg.png);
+  background-repeat: no-repeat;
+  background-position: right center;
 
   @media (max-width: 880px) {
     background: none;
@@ -511,7 +514,7 @@
     height: 100vh;
     max-height: 1366px;
     padding: 150px 50px calc(28vh + 230px) 150px;
-    background: url(../images/bottom-screen-bg.png) right center no-repeat;
+    // background: url(../images/bottom-screen-bg.png) right center no-repeat;
     background-size: 100% 100%;
 
     @media (min-width: 1920px), (min-height: 1000px) {
@@ -1557,7 +1560,7 @@
     // @media (max-width: 992px) {
     //   margin-bottom: 24px;
     // }
-    @media (max-width: 768px) {
+    @media (max-width: 960px) {
       gap: 20px;
       margin-bottom: 40px;
       flex-wrap: wrap;
@@ -1583,17 +1586,23 @@
     }
     @media (max-width: 1280px) {
       @include fz(42);
+    } 
+    @media (max-width: 1140px) {
+      @include fz(38);
     }   
     @media (max-width: 1024px) {
       @include fz(38);     
-    }   
+    }  
+    @media (max-width: 960px) {
+      @include fz(36);     
+    }  
     @media (max-width: 480px) {      
       @include fz(36);
     }
   }
 
   &-select {
-    @media (max-width: 768px) {
+    @media (max-width: 960px) {
       margin-left: auto;
     }
   }
@@ -1611,7 +1620,7 @@
      border-radius: 8px;
     }       
    
-    @media (max-width: 768px) {     
+    @media (max-width: 960px) {     
       width: 100%;
       order: 1;     
     }
@@ -1647,6 +1656,9 @@
         padding-left: 20px;
         padding-right: 20px;
       }
+      @media (max-width: 1140px) {
+        max-width: 308px; 
+      } 
       @media (max-width: 1024px) {
         max-width: 265px;        
       }
@@ -1657,6 +1669,10 @@
       //   border-radius: 8px 0px 0px 8px;       
       //   @include fz(11);
       // }
+      @media (max-width: 960px) {
+        max-width: 100%;
+        width: 100%;       
+      }
       @media (max-width: 768px) {
         max-width: 100%;
         width: 100%;
@@ -2027,12 +2043,12 @@
   }
 
   .contest-content {
-    max-width: 547px;   
+    max-width: 590px;   
     @media (max-width: 1366px) {     
-      max-width: 447px;
+      max-width: 490px;
     }
     @media (max-width: 1280px) {     
-      max-width: 402px;
+      max-width: 450px;
     }
     // @media (max-width: 1140px) {     
     //   max-width: 268px;
@@ -2047,24 +2063,24 @@
   &__title {
     margin-top: 0;
     color: $font;
-    @include fz(56);  
+    @include fz(50);  
     font-weight: 700;  
     text-transform: uppercase; 
     margin-bottom: 20px;
     @media (max-width: 1680px) {
-      @include fz(50); 
+      @include fz(42); 
       margin-bottom: 16px;
     }
     @media (max-width: 1366px) {
-      @include fz(46); 
+      @include fz(36); 
       margin-bottom: 14px;  
     }
     @media (max-width: 1280px) {
-      @include fz(42); 
+      @include fz(32); 
       margin-bottom: 14px;
     }
     @media (max-width: 1140px) {     
-      @include fz(38); 
+      @include fz(32); 
       margin-bottom: 10px;
       max-width: 542px;
     }
@@ -2682,6 +2698,7 @@
   }
 
   @media (max-width: 1366px) {
+    min-height: 60vh;
     .row {
       margin-left: -8px;
       margin-right: -8px;
@@ -2690,6 +2707,10 @@
       padding-left: 8px;
       padding-right: 8px;
     }
+  }
+
+  @media (max-width: 1140px) {
+    min-height: 63vh;
   }
 
   @media (max-width: 1024px) {
@@ -2746,15 +2767,14 @@
       padding: 20px 28px;
     }
   }
-  &__wrapper {
-    transform: rotate(-2deg);
-    &:nth-child(odd) {
-      transform: rotate(-0.5deg);
-    }
-    &:nth-child(even) {
-      transform: rotate(0.5deg);
-    }
-  }
+  // &__wrapper { 
+  //   &:nth-child(odd) {
+  //     transform: rotate(-0.5deg);
+  //   }
+  //   &:nth-child(even) {
+  //     transform: rotate(0.5deg);
+  //   }
+  // }
   .row {
     flex-wrap: wrap;
     @media (max-width: 1366px) {
@@ -3135,7 +3155,7 @@
     .h2 {
       width: 100%;
       color: $bgc; 
-      @include fz(64);  
+      @include fz(40);  
       font-weight: 700;
       line-height: 135%;
       text-transform: uppercase;
@@ -3143,20 +3163,20 @@
       margin-bottom: 60px;
       letter-spacing: 2.6px;
       @media (max-width: 1680px) {
-        @include fz(56); 
+        @include fz(30); 
         margin-bottom: 50px;
       }
       @media (max-width: 1366px) {
-        @include fz(48); 
+        @include fz(26); 
         margin-bottom: 40px;
       }
       @media (max-width: 1280px) {
-        @include fz(42);        
+        @include fz(22);        
         text-align: center;
         margin-bottom: 30px;
       }
       @media (max-width: 1024px) {
-        @include fz(38);      
+        @include fz(22);      
         margin-bottom: 40px;
       }
       // @media (max-width: 992px) {
@@ -3168,7 +3188,7 @@
       //   margin-bottom: 22px;
       // }
       @media (max-width: 768px) {
-        @include fz(36); 
+        @include fz(26); 
         margin-bottom: 22px;
       }
       // @media (max-width: 480px) {
