--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4630,6 +4630,13 @@ img {
     margin-bottom: 46px;
   }
 }
+@media (max-width: 1280px) and (max-height: 640px) {
+  .screen-main-contest__title {
+    font-size: 42px;
+    font-size: 2.625rem;
+    margin-bottom: 40px;
+  }
+}
 @media (max-width: 1140px) {
   .screen-main-contest__title {
     font-size: 40px;
@@ -5033,6 +5040,13 @@ img {
     margin-bottom: 14px;
   }
 }
+@media (max-width: 1280px) and (max-height: 640px) {
+  .screen-about-contest__title {
+    font-size: 30px;
+    font-size: 1.875rem;
+    margin-bottom: 12px;
+  }
+}
 @media (max-width: 1140px) {
   .screen-about-contest__title {
     font-size: 32px;
@@ -5133,6 +5147,13 @@ img {
     font-size: 14px;
     font-size: 0.875rem;
     margin-bottom: 28px;
+  }
+}
+@media (max-width: 1280px) and (max-height: 640px) {
+  .screen-about-contest__text {
+    font-size: 12px;
+    font-size: 0.75rem;
+    margin-bottom: 26px;
   }
 }
 @media (max-width: 1140px) {
@@ -5536,6 +5557,12 @@ img {
     top: 0px;
   }
 }
+@media (max-width: 1280px) and (max-height: 640px) {
+  .screen-about-contest .contest-steps {
+    left: 53%;
+    top: -15px;
+  }
+}
 @media (max-width: 1140px) {
   .screen-about-contest .contest-steps {
     left: 46%;
@@ -5573,6 +5600,11 @@ img {
 @media (max-width: 1280px) {
   .screen-about-contest .contest-steps img {
     max-height: 380px;
+  }
+}
+@media (max-width: 1280px) and (max-height: 640px) {
+  .screen-about-contest .contest-steps img {
+    max-height: 340px;
   }
 }
 @media (max-width: 1140px) {
