--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -2035,6 +2035,10 @@
       @include fz(48); 
       margin-bottom: 46px;
     }
+    @media (max-width: 1280px) and (max-height: 640px) {
+      @include fz(42); 
+      margin-bottom: 40px;
+    }
     @media (max-width: 1140px) {
       @include fz(40); 
       margin-bottom: 42px;
@@ -2320,6 +2324,10 @@
       @include fz(32); 
       margin-bottom: 14px;
     }
+    @media (max-width: 1280px) and (max-height: 640px) {
+      @include fz(30); 
+      margin-bottom: 12px;
+    }
     @media (max-width: 1140px) {     
       @include fz(32); 
       margin-bottom: 10px;
@@ -2395,6 +2403,10 @@
     @media (max-width: 1280px) {     
       @include fz(14);
       margin-bottom: 28px;
+    }
+    @media (max-width: 1280px) and (max-height: 640px) {
+      @include fz(12);
+      margin-bottom: 26px;
     }
     @media (max-width: 1140px) {
       max-width: 100%;
@@ -2754,6 +2766,10 @@
     @media (max-width: 1280px) {
       top: 0px;
     }
+    @media (max-width: 1280px) and (max-height: 640px) {
+      left: 53%;
+      top: -15px;
+    }
     @media (max-width: 1140px) {
       left: 46%;
     }
@@ -2794,6 +2810,9 @@
       // }
       @media (max-width: 1280px) {
         max-height: 380px;
+      }
+      @media (max-width: 1280px) and (max-height: 640px) {
+        max-height: 340px;
       }
       @media (max-width: 1140px) {
         max-height: 320px;
