--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3207,6 +3207,9 @@ img {
 .agree-content {
   margin-bottom: 20px;
 }
+.agree-wrapper.hidden {
+  display: none;
+}
 .agree-bg {
   position: fixed;
   z-index: -1;
@@ -3241,55 +3244,161 @@ img {
     max-height: none;
   }
 }
+.agree-title {
+  font-size: 32px;
+  font-size: 2rem;
+  font-weight: 400;
+  margin-bottom: 48px;
+  text-transform: uppercase;
+}
+@media (max-width: 1680px) {
+  .agree-title {
+    font-size: 24px;
+    font-size: 1.5rem;
+    margin-bottom: 38px;
+  }
+}
+@media (max-width: 1366px) {
+  .agree-title {
+    font-size: 20px;
+    font-size: 1.25rem;
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 1140px) {
+  .agree-title {
+    font-size: 16px;
+    font-size: 1rem;
+    margin-bottom: 26px;
+  }
+}
+@media (max-width: 768px) {
+  .agree-title {
+    font-size: 12px;
+    font-size: 0.75rem;
+    margin-bottom: 22px;
+  }
+}
+@media (max-width: 599px) {
+  .agree-title {
+    font-size: 12px;
+    font-size: 0.75rem;
+  }
+}
 .agree-question {
   max-width: 1360px;
   font-family: "Bebas Neue Pro";
-  font-weight: 400;
-  font-size: 44px;
-  font-size: 2.75rem;
+  font-weight: 700;
+  font-size: 100px;
+  font-size: 6.25rem;
   letter-spacing: 1.6px;
   line-height: 1.28;
   color: #FFF;
   text-transform: uppercase;
-  margin-bottom: 38px;
+  margin-bottom: 32px;
 }
 @media (max-width: 1680px) {
   .agree-question {
-    font-size: 36px;
-    font-size: 2.25rem;
+    font-size: 88px;
+    font-size: 5.5rem;
     max-width: 1000px;
+    margin-bottom: 28px;
   }
 }
 @media (max-width: 1366px) {
   .agree-question {
-    font-size: 30px;
-    font-size: 1.875rem;
+    font-size: 78px;
+    font-size: 4.875rem;
     max-width: 900px;
+    margin-bottom: 26px;
   }
 }
 @media (max-width: 1140px) {
   .agree-question {
-    font-size: 24px;
-    font-size: 1.5rem;
+    font-size: 64px;
+    font-size: 4rem;
     max-width: 800px;
     margin-bottom: 22px;
   }
 }
 @media (max-width: 768px) {
   .agree-question {
-    font-size: 16px;
-    font-size: 1rem;
+    font-size: 50px;
+    font-size: 3.125rem;
     max-width: 530px;
-    margin-bottom: 16px;
+    margin-bottom: 20px;
   }
 }
 @media (max-width: 599px) {
   .agree-question {
-    font-size: 22px;
-    font-size: 1.375rem;
+    font-size: 32px;
+    font-size: 2rem;
     max-width: 530px;
-    margin-bottom: 16px;
   }
+}
+.agree-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 48px;
+}
+@media (max-width: 1680px) {
+  .agree-buttons {
+    gap: 36px;
+  }
+}
+@media (max-width: 1140px) {
+  .agree-buttons {
+    gap: 28px;
+  }
+}
+.agree-no__confirm {
+  position: absolute;
+  top: 50%;
+  font-size: 80px;
+  font-size: 5rem;
+  line-height: 130%;
+  font-weight: 700;
+  text-transform: uppercase;
+  max-width: 55%;
+}
+@media (max-width: 1680px) {
+  .agree-no__confirm {
+    font-size: 76px;
+    font-size: 4.75rem;
+  }
+}
+@media (max-width: 1366px) {
+  .agree-no__confirm {
+    font-size: 64px;
+    font-size: 4rem;
+  }
+}
+@media (max-width: 1140px) {
+  .agree-no__confirm {
+    max-width: 80%;
+    font-size: 52px;
+    font-size: 3.25rem;
+  }
+}
+@media (max-width: 768px) {
+  .agree-no__confirm {
+    font-size: 48px;
+    font-size: 3rem;
+  }
+}
+@media (max-width: 599px) {
+  .agree-no__confirm {
+    font-size: 32px;
+    font-size: 2rem;
+    max-width: 90%;
+  }
+}
+.agree-no__confirm.hidden {
+  display: none;
 }
 .agree-date-error-text {
   margin-top: 20px;
@@ -3434,19 +3543,6 @@ img {
   text-transform: uppercase;
   color: #7E9185;
 }
-.agree-confirm-btn {
-  margin-top: 60px;
-}
-@media (max-width: 1140px) {
-  .agree-confirm-btn {
-    margin-top: 36px;
-  }
-}
-@media (max-width: 768px) {
-  .agree-confirm-btn {
-    margin-top: 26px;
-  }
-}
 .agree-cookie {
   margin-top: auto;
   max-width: 970px;
@@ -3458,6 +3554,9 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.agree-cookie.hidden {
+  display: none;
 }
 @media (max-width: 1680px) {
   .agree-cookie {
